Bug 142120 Ctrl+Right Arrow in space-only mode should not stop again after crossing spaces p=vdvo@vdvo.net r=roc sr=jst hopefully also fixing bug 236172